--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 hey hey
 hey dom
+
+<html>
+
+<h1> Artistic statment</h1>
+    I’m interested in the astatic beauty that can be produced in juggling though different patterns
+     and sequences, the endless possibilities of different moves and combinations give so much 
+     creative freedom. I’m curious about the virtuosity of juggling and enjoy creating 
+     and exploring complexity in my juggling. I enjoy how juggling can cause amazement and 
+     surprise, revealing unforeseen movement qualities of the objects.
+</html>
