--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@ hey dom
 
 <html>
 
+<ul>
+    <li>Home</li>
+    <li>Lives Shows</li>
+    <li>Pictures</li>
+    <li>Contact</li>
+
+</ul>
+
 <h1> Artistic statment</h1>
     I’m interested in the astatic beauty that can be produced in juggling though different patterns
      and sequences, the endless possibilities of different moves and combinations give so much 
