--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-hey hey
-hey dom
 
 <html>
 
@@ -11,10 +9,16 @@ hey dom
 
 </ul>
 
-<h1> Artistic statment</h1>
+<h1> Domenyk La Terre </h1>
+
+BIO text  ...... 
+
+<h2> Artistic statment</h2>
     I’m interested in the astatic beauty that can be produced in juggling though different patterns
      and sequences, the endless possibilities of different moves and combinations give so much 
      creative freedom. I’m curious about the virtuosity of juggling and enjoy creating 
      and exploring complexity in my juggling. I enjoy how juggling can cause amazement and 
      surprise, revealing unforeseen movement qualities of the objects.
+
+     
 </html>
