--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ BIO text  ......
      creative freedom. I’m curious about the virtuosity of juggling and enjoy creating 
      and exploring complexity in my juggling. I enjoy how juggling can cause amazement and 
      surprise, revealing unforeseen movement qualities of the objects.
-
+<img scr="street show 1.JPG">
      
 </html>
