--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </ul>
 
-<h1> Domenyk La Terre </h1>
+<h1> Domenyk La Terra </h1>
 
 BIO text  ...... 
 
@@ -19,6 +19,10 @@ BIO text  ......
      creative freedom. I’m curious about the virtuosity of juggling and enjoy creating 
      and exploring complexity in my juggling. I enjoy how juggling can cause amazement and 
      surprise, revealing unforeseen movement qualities of the objects.
-<img scr="street show 1.JPG">
+
+
+<img> scr= "street show 1.JPG" <img>
+
+
      
 </html>
