--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 BIO text  ...... 
 
 <h2> Artistic statment</h2>
-    I’m interested in the astatic beauty that can be produced in juggling though different patterns
+    I’m interested in the astatic beauty that can be produced in juggling through different patterns
      and sequences, the endless possibilities of different moves and combinations give so much 
      creative freedom. I’m curious about the virtuosity of juggling and enjoy creating 
      and exploring complexity in my juggling. I enjoy how juggling can cause amazement and 
