--- a/street show.html
+++ b/street show.html
@@ -3,6 +3,19 @@
 
 <h1> street show page </h1>
 
+<Nav>
+    <ul>
+      
+      <li><a href="index.html">Home</a></li>
+      <li><a href="PYRAMID.html">PYRAMID</a></li>
+      <li><a href="street show.html">Street Show</a></li>
+      <li><a href="pictures.html">Pictures</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      
+  
+    </ul> 
+  </Nav>
+
 <iframe src="https://www.youtube.com/embed/X8G6-t6GamQ?loop=1&showinfo=0&rel=0" width="560" height="315" frameborder="0"></iframe>
 
 
