--- a/contact.html
+++ b/contact.html
@@ -15,4 +15,7 @@
     </ul> 
   </Nav>
 
+  <H2> Domenyk La Terra </H2>
+  Email:  <domthejuggler@gmail.com class="com"></domthejuggler@gmail.com>
+
 </html>
