--- a/PYRAMID.html
+++ b/PYRAMID.html
@@ -1,6 +1,10 @@
 <html>
     
-<h1> PYRAMID act page </h1>
+<h1>PYRAMID</h1>
+<H2> comtempory juggling act</H2>
+
+text about act.... 
+
 
 <Nav>
     <ul>
