--- a/street show.html
+++ b/street show.html
@@ -1,7 +1,11 @@
 <html>
 
 
-<h1> street show page </h1>
+<h1> Street/Festival Show </h1>
+<h2>comedy juggling show  </h2>
+ 
+text..... 
+
 
 <Nav>
     <ul>
