--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
   </ul> 
 </Nav>
-<h1> Domenyk La Terra </h1>
 
+
+<h1> Domenyk La Terra </h1>
+<body>
 BIO text  ...... 
 
 <h2> Artistic statment</h2>
@@ -25,8 +27,8 @@ BIO text  ......
      surprise, revealing unforeseen movement qualities of the objects.
 
 
-<img> scr= "street show 1.jpg" <img>
+<img> scr= "street show 1.JPG" <img>
 
-
+</body>
      
 </html>
